Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5742

Assertion failure node->n_pending on fil0fil.c line 5039 on debug build when innodb_use_fallocate=1

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 5.5.36
    • 5.5.37
    • None
    • None

    Attachments

      Activity

        People

          jplindst Jan Lindström (Inactive)
          jplindst Jan Lindström (Inactive)
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved:

            Time Tracking

              Estimated:
              Original Estimate - 0.25d
              0.25d
              Remaining:
              Time Spent - 1h Remaining Estimate - 1h
              1h
              Logged:
              Time Spent - 1h Remaining Estimate - 1h
              1h

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.