MDEV-5742: Assertion failure node->n_pending on fil0fil.c line 5039 on debug build when innodb_use_fallocate=1

Analysis: There was merge error that caused additional call to 
fil_node_complete_io.

Fixed by removing incorrect call and fixed calculation of extended
file size.